# st-undp

./: .gitignore  404.html  LICENSE  Makefile  README.md  app.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: azure-webapps-python.yml  material-for-mkdocs.yml
.streamlit/: config.toml
cli/: index.html
deployment/: index.html
docs/: cli.md  deployment.md  index.md  installation.md  reference.md  usage.md
docs/stylesheets/: extra.css
installation/: index.html
pages/: about.py  custom.py  extras.py  integrations.py  standard.py
reference/: index.html
st_undp/: __init__.py  __main__.py  components.py  config.toml  main.scss  plotly_components.py  plotly_theme.py  startup.sh  style.html  utils.py
st_undp/data/: footer-default.json  footer-dfx.json  plotly-theme.json  undp-colors.json
st_undp/templates/: author-card.html  author-summary.html  author.html  breadcrumb.html  content-card.html  download-card-image.html  download-card.html  featured-card.html  footer-item.html  footer.html  header.html  image-card.html
usage/: index.html
