[tool.poetry]
name = "st-undp"
version = "0.1.0"
description = "A utility package that styles Streamlit apps according to UNDP Design System"
authors = ["Mykola Skrynnyk <mykola.skrynnyk@undp.org>", "Gedion Disassa <gedion.disassa@undp.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pylint = "^3.2.7"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
